--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,5 @@
+
+@import 'base';
 @font-face {
   font-family: 'ballpark';
   font-style: normal;
@@ -82,7 +84,7 @@ h3 {
 }
 
 body {
-  background-color: #FFF9DC;
+  background-color: $primary-color;
   font-family: dayrom, sans-serif;
 }
 
